--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Bootstrap==3.3.0.1
 Flask-Migrate==1.3.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+SQLAlchemy==1.0.5
 SQLAlchemy-Utils==0.30.5
 psycopg2==2.5.4
 jsonschema==2.3.0
