--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ venv
 *.pyc
 __pycache__
 version_label
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
