--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ SQLAlchemy-Utils==0.30.5
 
 git+https://github.com/alphagov/digitalmarketplace-utils.git@16.0.0#egg=digitalmarketplace-utils==16.0.0
 git+https://github.com/alphagov/digitalmarketplace-apiclient.git@3.7.0#egg=digitalmarketplace-apiclient==3.7.0
+git+https://github.com/pebblecode/cirrus-email.git@0.0.5#egg=cirrus-email==0.0.5
 
 # For schema validation
 jsonschema==2.5.1
