--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.8
 git+https://github.com/alphagov/digitalmarketplace-utils.git@16.0.0#egg=digitalmarketplace-utils==16.0.0
 git+https://github.com/alphagov/digitalmarketplace-apiclient.git@3.7.0#egg=digitalmarketplace-apiclient==3.7.0
 git+https://github.com/pebblecode/cirrus-email.git@0.0.6#egg=inoket-email==0.0.6
+git+https://github.com/pebblecode/cirrus-email-template@1.0.0#egg=inoket-email-templates==1.0.0
 
 # For schema validation
 jsonschema==2.5.1
